# Lab-Analysis

./: .coze  .env.example  .gitignore  .pre-commit-config.yaml  ADVANCED_ANALYSIS.md  ADVANCED_VISUALIZATION.md  AGENTS.md  DSPY_SUMMARY.md  INTERACTIVE_GUIDE.md  LICENSE  README.md  README_EN.md  README_en.md  SETUP_GUIDE.md  UPLOAD_BACKUP_README.md  VISION_USAGE.md  compare_runs.py  coverage_check.py  data_analyzer.py  data_loader.py  gen_final_report.py  ingest_image.py  init_dirs.py  literature_interpreter.py  literature_searcher.py  mcp_config.example.json  mcp_server.py  migrate_deid.py  mypy_baseline.txt  pyproject.toml  qwen_vl_report_check.py  requirements.txt  run.bat  run.ps1  run_analysis.py  run_full_pipeline.py  test_env.ps1  upload_to_feishu.py
.cursor/rules/: git-no-push-without-confirm.mdc
.github/workflows/: ci.yml  quant_eval_gate.yml  tests.yml
docs/: COMPLEXITY_BASELINE.md  COVERAGE_THRESHOLD.md  DOCSTRING_BASELINE.md  DSPY_CACHE_HITRATE.md  DSPY_INTEGRATION.md  DSPY_USAGE.md  EVIDENCE_GRADING.md  MCP_INTEGRATION.md  MYPY_BASELINE.md  README_ALIGNMENT.md
examples/: INDEX.md  collect_dspy_training_data.py  compile_all_dspy_modules.py  compile_all_dspy_modules_v2.py  compile_dspy_module.py  compile_mri_analyzer_fix.py  demo_dashscope_compatibility.py  demo_dspy_e2e.py  demo_dspy_prompt_e2e.py  demo_prompt_extraction.py  dspy_prompt_comparison.py  dspy_quant_eval.py  dspy_quickstart.py  dual_mode_pipeline.py  monitor_dspy_performance.py  prepare_dspy_training_data.py  test_dashscope_compatibility.py  test_dspy_basic.py  test_dspy_e2e.py  test_dspy_llm.py  test_dspy_prompt_e2e.py  test_prompt_extraction.py
lab_analysis/: __init__.py  __main__.py  _exceptions.py  _log.py  _phi_filter.py  alert_generator.py  api_clients.py  batch_vision_extract.py  cleanup_runs.py  compare_report_modes.py  config.py  dashboard.py  data_analyzer.py  data_loader.py  error_logger.py  error_reporting.py  evidence_grader.py  extract_lab_data.py  feedback.py  fhir_exporter.py  gen_final_report.py  gen_final_report_dspy.py  gen_final_report_pdf.py  ingest_data.py  ingest_image.py  lab_prediction.py  literature_filter.py  literature_interpreter.py  literature_interpreter_dspy.py  literature_searcher.py  llm_client.py  organize_local_files.py  patient_id.py  pipeline.py  quant_metrics.py  quant_visualizer.py  qwen_vl_report_check.py  qwen_vl_report_check_dspy.py  report_schema.py  report_schema_models.py  (+6 more)
lab_analysis/analysis/: __init__.py  _base.py  _compute.py  charts.py  run.py
lab_analysis/dspy_modules/: __init__.py  _cache_metrics.py  _retry.py  final_report_generator.py  lab_data_extractor.py  literature_interpreter.py  mri_analyzer.py  multi_patient.py  prompt_inspector.py
lab_analysis/extract_lab_data/: __init__.py  ocr.py  parser.py  report.py
lab_analysis/ingest_data/: __init__.py  _log.py  batch.py  dicom.py  lab.py  report.py
lab_analysis/literature_searcher/: __init__.py  __main__.py  parser.py  pubmed.py  strategies.py
lab_analysis/pipeline/: __init__.py  cli.py  context.py  ingest.py  run.py  step_defs.py  steps.py
lab_analysis/scoring_card/: __init__.py  __main__.py  dimensions.py  hypotheses.py  io.py  types.py
mcp_server/: __init__.py  audit.py  patient.py  quant_eval.py  recompile.py  trend.py
models/dspy/: final_report_generator_compiled.json  lab_data_extractor_compiled.json  literature_interpreter_compiled.json  mri_analyzer_compiled.json
raw/patient_846552421134373347/papers/lab_report_20260324_outpatient/: metadata.md  metrics.md
raw/patient_846552421134373347/papers/lab_report_20260330_outpatient/: metadata.md  metrics.md
raw/patient_846552421134373347/papers/lab_report_20260408_inpatient/: metadata.md  metrics.md
raw/patient_846552421134373347/papers/lab_report_20260414_inpatient/: metadata.md  metrics.md
reports/: DSPY_E2E_TEST_REPORT.md  dspy_e2e_test_report.json  dspy_performance_report.json
requirements/: constraints.txt
scripts/: audit_dspy_models.py  autofix_f541.py  check_readme_alignment.py  check_test_count.py  cleanup_local_upload.py  cov_summary.py  dspy_cache_stats.py  inject_compile_metadata.py  narrow_broad_except.py  pre_commit_check.py  print_to_logger.py  quant_eval_gate.py  scan_docstrings.py  scan_hardcoded_keys.py  verify_f541.py
tests/: conftest.py  test_alert_generator.py  test_analysis_base.py  test_analysis_compute.py  test_analysis_run.py  test_batch_vision_extract.py  test_cleanup_runs.py  test_compare_modes.py  test_config.py  test_dashboard.py  test_data_analyzer.py  test_data_loader_e2e.py  test_dspy_cache_metrics.py  test_dspy_modules.py  test_dspy_retry_fallback.py  test_dual_mode_pipeline.py  test_error_logger.py  test_evidence_grader.py  test_exceptions.py  test_extract_lab_data.py  test_feedback.py  test_fhir_exporter.py  test_gen_final_report.py  test_gen_final_report_dspy.py  test_gen_final_report_pdf.py  test_incremental_compile.py  test_ingest_data.py  test_inject_compile_metadata.py  test_lab_prediction.py  test_literature_filter.py  test_literature_interpreter.py  test_literature_interpreter_dspy.py  test_literature_searcher_parser.py  test_literature_searcher_pubmed.py  test_literature_searcher_strategies.py  test_llm_client_extra.py  test_logging.py  test_mcp_server.py  test_multi_patient.py  test_organize_local_files.py  (+21 more)
tests/fixtures/: quant_eval_gate_result.json  quant_eval_sample_fail.json  quant_eval_sample_pass.json
