[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-analysis"
version = "0.1.0"
description = "慢性胰腺炎检验数据自动化分析 Pipeline（检验 + 文献 + 影像 + 综合报告）"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nxz1026" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "requests>=2.28",
  "Pillow>=10.0",
  "tenacity>=8.0",
  "cryptography>=41.0",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=7.0", "pytest-cov>=4.0"]
dspy = ["dspy-ai>=2.4", "pydicom>=2.4"]
pdf = ["weasyprint>=62", "markdown>=3.5"]
dashboard = ["streamlit>=1.28"]
# MCP server (mcp_server.py) 依赖, 装这个 group 后才能用 audit_dspy_models / run_quant_eval tool
mcp = ["mcp>=1.0"]

[project.scripts]
lab-analysis = "lab_analysis.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lab_analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "e2e: end-to-end tests that may call external services",
    "scnet: tests that mock the SCNet OCR API",
]

[tool.coverage.run]
branch = true
source = ["lab_analysis"]
omit = [
    "lab_analysis/__main__.py",
    "lab_analysis/cleanup_runs.py",
]

[tool.coverage.report]
# CI 阈值跟进实际覆盖率提升 (22.80% -> 26%),后续每次 +1%
fail_under = 25
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Migrated from top-level [tool.ruff] (ruff 0.15+ requirement)
select = ["F", "I", "B", "SIM"]
fixable = ["ALL"]
